# AIE7

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
02_Embeddings_and_RAG/: .gitignore  Pythonic_RAG_Assignment.ipynb  enhanced_rag_analysis.py  pyproject.toml  rag_implementation_explained.md  video_script_5min.md
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  langsmith_evaluation_analysis.md
