[project]
name = "aie7"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bert>=2.2.0",
    "matplot>=0.1.9",
    "notebook>=7.4.3",
    "openai>=1.93.0",
    "pandas-stubs==2.2.3.250527",
    "ragas>=0.2.15",
    "rouge>=1.0.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
